
public enum AgeGroup {
    Young, Adult, Elderly;
}