
public enum Category {
    Doctor, Nurse, HAssistant;
}