
public interface Family {

    String getFamilyName(); // Devolve o nome da família

}
