
public interface HealthProfessional {

    String getName(); // Devolve o nome do profissional

    Category getCategory(); // Devolve a sua categoria profissional

    String getCategoryName(); // Devolve a o nome da sua categoria profissional

}