
public enum Service {
    Consultation, MinorSurgery, Nursing
}